<resources>
    <string name="app_name">RSN</string>

    <!--Menu-->
    <string name="action_items_view">View</string>
    <!--End-->

    <!--Tabs-->
    <string name="tab_sms">SMS</string>
    <string name="tab_call">Call</string>
    <string name="tab_remind">Remind</string>
    <string name="tab_note">Note</string>
    <string name="tab_header">Свой заголовок</string>
    <!--End-->

    <!--NavigationDrawer-->
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="action_test_mode">Test mode</string>
    <string name="action_stop">Stop service</string>
    <string name="action_start">Start service</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_search">Search</string>
    <string name="action_history">History</string>

    <string name="action_authorization">Authorization</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <!--End-->

    <!--Fragment-->
    <string name="sms_welcome">Create you first sms here.</string>
    <string name="call_welcome">Create you first call-notification here.</string>
    <string name="remind_welcome">Create you first remind here.</string>
    <string name="note_welcome">Create you first note here.</string>
    <!--End-->

    <!--DialogFragment-->
    <string name="dialog_create_note">Adding note</string>
    <string name="dialog_create_remind">Adding remind</string>
    <string name="dialog_create_call">Adding call</string>
    <string name="dialog_create_sms">Adding sms</string>
    <string name="hint_title_note">Write your note here:</string>
    <string name="hint_title_remind">Write your remind here:</string>
    <string name="hint_title_sms">Write your sms here:</string>
    <string name="hint_title_call">Write your call here:</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <!--End-->

    <!--Buttons-->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_done">Done</string>
    <!--End-->

    <!-- FirebaseUI Configuration -->
    <string name="facebook_app_id">974852839256398</string>
    <string name="twitter_app_key">opT7i4d6CqqOrFKq77V3kzYQx</string>
    <string name="twitter_app_secret">OYg5yRvwETur3nUnwyPssehOjfjC54fymGaAB6QnIeJTwtxaaS</string>
    <!--End-->

    <!-- Login -->
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account">Create account</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter password</string>
    <!--End-->
    <!--Login error-->
    <string name="email_taken">The new user account cannot be created because the specified email address is already in use.</string>
    <string name="invalid_credentials">The specified authentication credentials are invalid. This may occur when credentials are malformed or expired.</string>
    <string name="invalid_email">The specified email is not a valid email.</string>
    <string name="invalid_origin">A security error occurred while processing the authentication request.</string>
    <string name="invalid_password">The specified user account password is incorrect.</string>
    <string name="network_error">An error occurred while attempting to contact the authentication server.</string>
    <string name="preempted">The current request was aborted by a new, incoming authentication request.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="user_denied_auth">The user did not authorize the application.</string>
    <string name="user_does_not_exist">The specified user account does not exist.</string>
    <!--End-->


    <string-array name="repeat">
        <item>Never</item>
        <item>3 min</item>
        <item>5 min</item>
        <item>10 min</item>
    </string-array>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="add_friends">Add Friends</string>
    <string name="add">Add</string>
    <string name="friend">Friend</string>
    <string name="friends">Add numbers</string>
    <string name="ok">OK</string>

    <!-- Names for recycler transation -->
    <string name="transition_name_or_number">transition:NAME_OR_NUMBER</string>
    <string name="transition_circle">transition:CIRCLE</string>
    <string name="transition_text">transition:TEXT</string>
    <string name="transition_date">transition:DATE</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>

    <string name="storage_category">STORAGE</string>

    <string name="delete_old_title">Delete old messages (reminds)</string>
    <string name="delete_old_summary">Delete old messages as limits are reached </string>

    <string name="delete_limit_title">Message limit</string>
    <string name="delete_limit_summary">Set number of messages to save </string>

    <!-- Sound -->
    <string name="sound_category">SOUND</string>

    <string name="sound_type_title">Sound</string>
    <string name="sound_type_summary">Choose type of notification sound</string>

    <string-array name="entries">
        <item>Silent</item>
        <item>Ringtone</item>
        <item>Vibrate</item>
        <item>Combine</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="ringtone_title">Ringtone</string>
    <string name="ringtone_summary">Choose ringtone</string>

    <string name="volume_name">Volume</string>
    <string name="volume_title">Ringtone volume </string>
    <string name="volume_summary">Set volume</string>

    <!--Other-->
    <string name="main_title">OTHER</string>
    <string name="main_summary">Other settings</string>

    <string name="reset_title">Reset</string>
    <string name="reset_summary">Clear all settings</string>

    <string name="tabs_title">Main tab </string>
    <string name="tabs_summary">Select main tab when application is started</string>

    <string-array name="entries_tab">
        <item>SMS</item>
        <item>Call</item>
        <item>Remind</item>
        <item>Note</item>
    </string-array>
    <array name="entry_values_tab">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </array>

    <!-- Language-->
    <string name="language_title">Language</string>
    <string name="language_summary">Choose language</string>

    <string-array name="entries_lang">
        <item>English</item>
        <item>Russian</item>
        <item>Ukrainian</item>
        <item>Default</item>
    </string-array>
    <string-array name="entry_values_lang">
        <item>en</item>
        <item>ru</item>
        <item>uk</item>
        <item>default</item>
    </string-array>

    <!--Authentication-->
    <string name="auth_category">AUTHENTICATION</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_summary">Change current password for the account</string>

    <string name="reset_password_title">Reset password</string>
    <string name="reset_password_summary">Send a password reset email</string>

    <!--Notification-->
    <string name="sms_notification_ticker_will">Sms will be send.</string>
    <string name="sms_notification_ticker_send">Sms sending report.</string>
    <string name="sms_notification_ticker_delivered">Sms were delivered.</string>

    <string name="call_notification_ticker">You have to do some call.</string>
    <string name="remind_notification_ticker">You have some remind.</string>

    <string name="sms_notification_text">. Sms.</string>
    <string name="call_notification_text">. Call.</string>
    <string name="remind_notification_text">. Remind.</string>

    <string name="cancel_notification_button">CANCEL</string>
    <string name="send_notification_button">SEND</string>
    <string name="cancel_notification_send">CANCEL SEND</string>
    <string name="call_notification_button">CALL</string>
    <string name="cancel_notification_call">CANCEL CALL</string>
    <string name="later_notification_button">LATER</string>
    <string name="cancel_notification_remind">REMIND CANCELED</string>

    <string name="title_activity_test_input_sms_ativity">Sms test input</string>

    <string name="was_sent_successful">was sent successful!</string>
    <string name="wasnt_sent"> wasn\'t sent.</string>
    <string name="some_error_happened">Some error happened!</string>
    <string name="service_is_unavailable">Failed because service is unavailable. </string>
    <string name="phone_module_is_off">Phone module is off.</string>
    <string name="sms_to_numbers">Sms to numbers: </string>
    <string name="with_text">with text: \"</string>
    <string name="end_of_with_text">\"</string>



</resources>
