<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/itemLayout">

    <android.support.v7.widget.CardView
        android:id="@+id/sms_cv"
        style="@style/itemCard">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id = "@+id/sms_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:src = "@drawable/check"
                    android:id="@+id/sms_check" />

                <TextView
                    android:id="@+id/sms_phone_num"
                    android:maxLines="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:transitionName="@string/transition_name_or_number" />

                <TextView
                    android:id="@+id/sms_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="6dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="15sp"
                    android:transitionName="@string/transition_text" />

                <TextView
                    android:id="@+id/sms_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="6dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="15sp"
                    android:transitionName="@string/transition_date" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
